--- a/03-pipes/src/app/app.component.html
+++ b/03-pipes/src/app/app.component.html
@@ -121,6 +121,27 @@
             <td> {{ fecha | date:'MMMM - dd' }} </td>
         </tr>
 
+        <tr>
+            <td> {{ nombre2 }} </td>
+            <td> capitalizado </td>
+            <td> {{ nombre2 | capitalizado }} </td>
+        </tr>
+
+        <tr>
+            <td> {{ nombre2 }} </td>
+            <td> capitalizado </td>
+            <td> {{ nombre2 | capitalizado:false }} </td>
+        </tr>
+
+        <tr>
+            <td> {{ nombre }} </td>
+            <td> contraseña : {{ activar }}
+                <br>
+                <button (click)="activar=!activar" type="button" class="btn btn-outline-primary">Activar/Desactivar</button>
+            </td>
+            <td> {{ nombre | contrasena:activar }} </td>
+        </tr>
+
     </tbody>
   </table>
 
@@ -134,4 +155,7 @@
     <h4>JSON</h4>
     <pre> {{heroe | json}}</pre>
 
+
+    <h4>YouTube <small>video</small></h4>
+    <iframe width="560" height="315" [src]="video | domseguro:'https://www.youtube.com/embed/'" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
